package com.narxoz.rpg.decorator;

public interface AttackAction {
    int execute();
    String getDescription();
}
